search typing spacing fixed and question detail clicking isue fixed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/search/search.css
@@ -1,7 +1,9 @@
 ﻿#search-panel {
     position: relative;
 }
-
+#temp-text{
+    font-family:myriadpro-regular;
+}
 
 
 .ask-button {
